--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.40.0",
     "@tabler/icons-react": "^2.47.0",
     "@types/react-big-calendar": "^1.8.9",
+    "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "filepond": "^4.30.6",
     "filepond-plugin-file-validate-type": "^1.2.9",
@@ -31,8 +32,7 @@
     "react-quilljs": "^1.3.3",
     "sharp": "^0.33.3",
     "sonner": "^1.4.3",
-    "swiper": "^11.0.7",
-    "xlsx": "^0.18.5"
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
